--- a/buttons/css/styles.css
+++ b/buttons/css/styles.css
@@ -104,7 +104,7 @@ body {
         			}
 
 
-			a#btn_hulk-hogan {
+			a#btn_hulk-hogan:before {
 				display: block;
 				/*width: 100px;
 				height: 100px;*/
@@ -128,7 +128,11 @@ body {
 			a#btn_hulk-hogan:hover {
 				
 				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/hulkyellow.png");
-				
+				margin: auto;
+				margin-top: 75px;
+				padding-top: 8px;
+				padding-left: 50px;
+
 			}
 			
 
@@ -141,7 +145,7 @@ body {
 
 
 
-			a#btn_apple {
+			a#btn_apple:before {
 				display: inline-block;
 				/*height: 40px;*/
 				box-sizing: border-box;
@@ -571,7 +575,10 @@ body {
 			}
 				
 
-
+			footer {
+				color: black;
+				line-height: 1px;
+			}
 
 
 
