--- a/buttons/css/styles.css
+++ b/buttons/css/styles.css
@@ -123,6 +123,23 @@ body {
 			}
 
 
+			a#btn_hulk-hogan:after {
+				display: block;
+				/*width: 100px;
+				height: 100px;*/
+				box-sizing: border-box;
+				border-radius: 50px;
+				margin: auto;
+				margin-top: 75px;
+				padding-top: 8px;
+				padding-left: 50px;
+
+				/*background-color: #232f3e;*/
+				color: #fff;
+				/*text-align: center;*/
+				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/hulk.png");
+				
+			}
 
 
 			a#btn_hulk-hogan:hover {
@@ -152,7 +169,29 @@ body {
 				border-radius: 4px;
 				margin: auto;
 				margin-top: 40px;
-				/*padding: 10px 30px 0 30px;*/
+				padding: 10px 30px 0 30px;
+				padding: 5px;
+				background-color: white;
+				/*border: 2px dotted black;*/
+				font-size: 18px;
+				font-family: 'Arial', sans-serif;
+				font-weight: bold;
+				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/Apple_logo_grey.png");
+				/*content: height 20px;
+				content: width 20px;*/
+				height: 150px;
+				width: 120px;
+
+			}
+
+			a#btn_apple:after {
+				display: inline-block;
+				/*height: 40px;*/
+				box-sizing: border-box;
+				border-radius: 4px;
+				margin: auto;
+				margin-top: 40px;
+				padding: 10px 30px 0 30px;
 				padding: 5px;
 				background-color: white;
 				/*border: 2px dotted black;*/
