--- a/buttons/css/styles.css
+++ b/buttons/css/styles.css
@@ -104,7 +104,7 @@ body {
         			}
 
 
-			a#btn_hulk-hogan:before {
+			a#btn_hulk-hogan>img {
 				display: block;
 				/*width: 100px;
 				height: 100px;*/
@@ -118,37 +118,15 @@ body {
 				/*background-color: #232f3e;*/
 				color: #fff;
 				/*text-align: center;*/
-				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/hulk.png");
 				
 			}
 
 
-			a#btn_hulk-hogan:after {
-				display: block;
-				/*width: 100px;
-				height: 100px;*/
-				box-sizing: border-box;
-				border-radius: 50px;
-				margin: auto;
-				margin-top: 75px;
-				padding-top: 8px;
-				padding-left: 50px;
 
-				/*background-color: #232f3e;*/
-				color: #fff;
-				/*text-align: center;*/
-				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/hulk.png");
+			a#btn_hulk-hogan>img:hover {
 				
-			}
-
-
-			a#btn_hulk-hogan:hover {
-				
-				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/hulkyellow.png");
-				margin: auto;
-				margin-top: 75px;
-				padding-top: 8px;
-				padding-left: 50px;
+				transform: rotate(360deg);
+				transition: 1.3s;
 
 			}
 			
@@ -162,69 +140,43 @@ body {
 
 
 
-			a#btn_apple:before {
+			a#btn_apple>img {
 				display: inline-block;
-				/*height: 40px;*/
 				box-sizing: border-box;
 				border-radius: 4px;
 				margin: auto;
 				margin-top: 40px;
 				padding: 10px 30px 0 30px;
-				padding: 5px;
-				background-color: white;
+				/*padding: 5px;
+*/				background-color: white;
 				/*border: 2px dotted black;*/
 				font-size: 18px;
-				font-family: 'Arial', sans-serif;
-				font-weight: bold;
-				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/Apple_logo_grey.png");
-				/*content: height 20px;
-				content: width 20px;*/
 				height: 150px;
-				width: 120px;
-
-			}
-
-			a#btn_apple:after {
-				display: inline-block;
-				/*height: 40px;*/
-				box-sizing: border-box;
-				border-radius: 4px;
-				margin: auto;
-				margin-top: 40px;
-				padding: 10px 30px 0 30px;
-				padding: 5px;
-				background-color: white;
-				/*border: 2px dotted black;*/
-				font-size: 18px;
-				font-family: 'Arial', sans-serif;
-				font-weight: bold;
-				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/Apple_logo_grey.png");
-				/*content: height 20px;
-				content: width 20px;*/
-				height: 150px;
-				width: 120px;
+				width: 167px;
 
 			}
 
 
-			a#btn_apple:hover {
+
+
+			a#btn_apple>img:hover {
 				
-				height: 148px;
-				width: 155px;
-				margin-top: 50px;
-				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/23656.png");
+				transform: rotate(8deg);
+				transition: 1s;
+
+
 				
 			}
 
 
-			a#btn_apple:active {
+			a#btn_apple>img:active {
 
 				
 			}
 
 
 
-			a#btn_lyft {
+			a#btn_lyft>img {
 				display: block;
 				/*width: 100px;
 				height: 100px;*/
@@ -240,16 +192,13 @@ body {
 				/*background-color: #232f3e;*/
 				color: #fff;
 				/*text-align: center;*/
-				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/Lyft_Logo_Spot_color.png");
 
 
 			}
 
 
-			a#btn_lyft:hover { 
-			
-
-
+			a#btn_lyft>img:hover { 
+		
 			
 				transform: translateX(-300px);
 				transition: ease-in 1.3s;
@@ -309,14 +258,13 @@ body {
 			}
 
 
-			a#btn_insta {
+			a#btn_insta>img {
 				display: inline-block;
 				height: 120px;
 
 				margin: auto;
 				margin-top: 60px;
 				padding: 10px 40px 10px 40px;
-				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/JFyofc-logo-instagram-background-png.png");
 
 
 
@@ -330,7 +278,7 @@ body {
 				text-align: center */
 			}
 
-			a#btn_insta:hover {
+			a#btn_insta>img:hover {
 				transform: rotate(360deg);
 				transition: 3.5s;
 				
@@ -339,7 +287,7 @@ body {
 			}
 
 
-			a#btn_insta:active {
+			a#btn_insta>img:active {
 				transform: scale(.9);
 				transition: 1s;
 			}
@@ -422,13 +370,12 @@ body {
 
 			
 
-			a#btn_fitbit {
+			a#btn_fitbit>img {
 				display: inline-block;
 				height: 150px;
 				margin: auto;
 				margin-top: 60px;
 				padding: 10px 40px 10px 40px;
-				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/fitbit-icon-20.jpg");
 
 				-webkit-filter: blur(0px); 
 				-moz-filter: blur(0px); 
@@ -439,7 +386,7 @@ body {
 				border-radius: 10px;
 			}
 
-			a#btn_fitbit:hover {
+			a#btn_fitbit>img:hover {
 					-webkit-filter: blur(4px); 
 				-moz-filter: blur(4px);
 				-o-filter: blur(4px); 
@@ -452,7 +399,7 @@ body {
 			}
 
 
-			a#btn_fitbit:active {
+			a#btn_fitbit>img:active {
 
 				transform: scale(1.2);
 				transition: .4s;
@@ -494,58 +441,56 @@ body {
   				
 			}
 
-
-
-
-
-
-
 				
-			a#btn_jude {
+			a#btn_jude>img {
 				display: inline-block;
 				height: 150px;
 				margin: auto;
 				margin-top: 60px;
 				padding: 10px 40px 10px 40px;
-				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/st jude red.png");
 
 			}
 
-			a#btn_jude:hover {
-				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/st jude blue.png");
-
-			}
-
-
-			a#btn_jude:active {
+			a#btn_jude>img:hover {
 				transform: scale(1.2);
 				transition: 1.1s;
+			}
+
+
+			a#btn_jude>img:active {
+				
 				 
 			}
 
-			a#btn_color-run {
+			a#btn_color-run>img {
 				display: inline-block;
 				height: 150px;
 				margin: auto;
 				margin-top: 60px;
 				padding: 10px 40px 10px 40px;
-				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/colorrunog.png");
 
 			}
 
-			a#btn_color-run:hover {
-				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/colorrun2.png");
-				
+			a#btn_color-run>img:hover {
+
+				 -webkit-transform: scaleX(-1);
+ 				 -moz-transform: scaleX(-1);
+  				-o-transform: scaleX(-1);
+  				transform: scaleX(-1);
+
+  				filter: FlipH;
+  				-ms-filter: "FlipH";
+  				/*transform: rotate(4deg);*/
+  				transition: 1s;
 			}
 
 
 			a#btn_color-run:active {
-				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/colorrun3.png");
-
+				
 				 
 			}
 
-			a#btn_coca-cola {
+			a#btn_coca-cola>img {
 				display: inline-block;
 				box-sizing: border-box;
 				border-radius: 45%;
@@ -554,31 +499,28 @@ body {
 				margin: auto;
 				margin-top: 60px;
 				padding: 10px 40px 10px 40px;
-				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/coca-cola-polar-bear.png");
 
 			}
 
-			a#btn_coca-cola:hover {
-				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/coca-cola-polar-bear2.png");
+			a#btn_coca-cola>img:hover {
 				border: solid 2pt red;
+				border-radius: 55%;
 				transform: rotate(5deg);
 				transition: .8s;
 			}
 
 
-			a#btn_coca-cola:active {
-				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/coca-cola-polar-bear-bottle.png");
+			a#btn_coca-cola<img:active {
 				transition: .4s;
 			}
 
 
-			a#btn_tonight-show {
+			a#btn_tonight-show>img {
 				display: inline-block;
 				height: 150px;
 				margin: auto;
 				margin-top: 60px;
 				padding: 10px 40px 10px 40px;
-				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/tonight-show.png");
 
 				-webkit-filter: blur(0px); 
 				-moz-filter: blur(0px); 
@@ -586,12 +528,11 @@ body {
 				-ms-filter: blur(0px);
 				filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='0'); 
 				filter: blur(0px); 
-				border-radius: 10px;
+			
 			}
 
-			a#btn_tonight-show:hover {
+			a#btn_tonight-show>img:hover {
 				height: 150px;
-				content: url("file:///Users/eao/Desktop/iffall2019/publish/buttons/images/tonight-show-2.png");
 				/*transform: rotateX(180deg);
 				transform: rotateY(180deg);*/
 				/*transform: rotateZ(180deg);*/
@@ -601,7 +542,7 @@ body {
 			}
 
 
-			a#btn_tonight-show:active {
+			a#btn_tonight-show>img:active {
 				-webkit-filter: blur(2px); 
 				-moz-filter: blur(2px);
 				-o-filter: blur(2px); 
@@ -614,10 +555,7 @@ body {
 			}
 				
 
-			footer {
-				color: black;
-				line-height: 1px;
-			}
+			
 
 
 
