--- a/microsite/www/css/styles.css
+++ b/microsite/www/css/styles.css
@@ -9,21 +9,88 @@ body {
 
 }
 
-section.content {
-  padding-top: 12%;
+section#content {
+  padding-top: 6%;
 }
 
-.about, .studio-ghibli, .message-and-style, .sources {
-  padding-bottom: 7%;
+section.about {
+
 }
+
+section#about h1 {
+  padding: 15px;
+}
+
+
+section#about #content {
+  
+  text-align: left;
+  line-height: 30px;
+  padding-left: 85px;
+
+}
+
+section#studio-ghibli {
+}
+
+
+section#studio-ghibli #content {
+  line-height: 30px;
+}
+
+section#message-and-style #content {
+   
+  text-align: left;
+  line-height: 30px;
+  
+}
+
+section#sources {
+  padding-top: 120px;
+}
+
+section#sources #content {
+   
+  text-align: left;
+  line-height: 30px;
+  
+}
+
+#sources h3 {
+  text-align: left;
+
+}
+
+section#sources a {
+  color: #202e21
+}
+
+section#sources a:hover {
+  width: 50px;
+  height: 60px;
+  background-color: #202e21;
+  color: white;
+  transform:scale(1.3);
+  transition: .2s;
+}
+
+section#sources a:active {
+  color: gray;
+}
+
+
+
 
 #content {
   /*margin-block-start: 20%;*/
-  margin-left: 3.3%;
-  margin-right: 3.3%;
+  margin-left: 2%;
+  margin-right: 2%;
   font-family: 'Libre Baskerville', serif;
   font-size: 11pt;
   color: #202e21;
+  padding-left: 30px;
+  padding-right: 40px;
+
 }
 
 #header img {
@@ -34,7 +101,7 @@ section.content {
   background-color: #202e21;
   position: fixed;
   top: 0%;
-  height: 125px;
+  height: 75px;
     opacity: .88;
     padding-bottom: 20px;
     width: 100%;
@@ -47,12 +114,6 @@ section.content {
   position: fixed;
 }
 
-#headerbar>h2 {
-  text-align: right;
-  position: fixed;
-  padding-left: 82%;
-  padding-top: 5%;
-}
 
 #navigation-tabs {
   
@@ -68,24 +129,31 @@ font-family: 'Reenie Beanie', cursive;*/
  letter-spacing: 2px;
  margin: 0;
  padding: 10px;
-}
-
-h2 {
-  margin: 0;
-  /*font-family: 'Shadows Into Light', cursive; */
-  font-family: 'Nothing You Could Do', cursive;
-  color: white;
-  font-size: 1.3rem;
-
+ padding-top: 28px;
+ padding-bottom: 5px;
 }
 
 h3 {
   font-family: 'Nothing You Could Do', cursive;
  /*color: white;*/
  color: #202e21;
- font-size: 3rem;
+ font-size: 3.5rem;
  padding-left: 3%;
  margin: 0;
+ padding-top: 89px;
+
+}
+
+h4 {
+  display: none;
+  font-family: 'Nothing You Could Do', cursive;
+  color: white;
+  font-size: 1.1rem;
+  letter-spacing: 2px;
+  margin: 0;
+  padding: 10px;
+  padding-top: 28px;
+  padding-bottom: 5px;
 }
 
 
@@ -94,10 +162,11 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  top: 8.8%;
+  top: 3%;
+  left: 1.1%;
   position: fixed;
   font-family: 'Libre Baskerville', serif;
-  font-size: 11pt;
+  font-size: 9pt;
 
  
 }
@@ -128,12 +197,58 @@ li a:hover {
 
 /*pictures*/
 
-#picture1>img {
-  width: 200px;
-  height: 100px;
+/*#picture1>img {
+
+  width: 400px;
+  height: 300px;
+  float: left;
+  margin-right: 20px;
+  margin-left: 20px;
+  
+
+}*/
+
+#picture2>img {
+
+  width: 400px;
+  height: 300px;
+  float: right;
+ margin: 20px;
+  padding-top: 5px;
+  
 }
 
+#picture3>img {
+  width: 350px;
+  height: 400px;
+  float: left;
+ margin: 30px;
+  
+}
 
+#picture4>img {
+  width: 400px;
+  height: 275px;
+  float: right;
+ margin: 20px;
+  
+}
+
+#picture5>img {
+  width: 250px;
+  height: 174px;
+  float: left;
+ margin: 20px;
+  
+}
+
+#picture6>img {
+  width: 243px;
+  height: 330px;
+  float: left;
+ margin: 20px;
+  
+}
 /*@media*/
 
 
@@ -162,10 +277,6 @@ li a:hover {
     padding-left: 71%;
     position: fixed;
 }
-  #headerbar>h2 {
-    padding-left: 80%;
-    padding-top: 5%;
-  }
 
 }
 
@@ -176,12 +287,6 @@ li a:hover {
     padding-left: 69%;
     position: fixed;
   }
-
-  #headerbar>h2 {
-    padding-left: 78%;
-    padding-top: 5%;
-  }
-
 }
 
 
@@ -190,11 +295,6 @@ li a:hover {
   #headerbar>h1 {
     padding-left: 67%;
     position: fixed;
-  }
-
-  #headerbar>h2 {
-    padding-left: 76.5%;
-    padding-top: 5%;
   }
 
 }
@@ -208,10 +308,6 @@ li a:hover {
     position: fixed;
   }
 
-  #headerbar>h2 {
-    padding-left: 74%;
-    padding-top: 5.4%;
-  }
 
 }
 
@@ -221,11 +317,6 @@ li a:hover {
   #headerbar>h1 {
     padding-left: 60%;
     position: fixed;
-  }
-
-  #headerbar>h2 {
-    padding-left: 72.3%;
-    padding-top: 5.9%;
   }
 
 }
@@ -238,91 +329,81 @@ li a:hover {
     position: fixed;
   }
 
-  #headerbar>h2 {
-    padding-left: 70%;
-    padding-top: 6.2%;
-  }
-
 }
 
 
 
-@media (max-width: 787px) {
+@media (max-width: 821px) {
   #headerbar>h1 {
-    padding-left: 55%;
-    position: fixed;
+    font-size: 1.9rem;
+    padding-left: 60%;
   }
-
-  #headerbar>h2 {
-    padding-left: 67.4%;
-    padding-top: 6.3%;
-  }
-
 }
 
 
-
-@media (max-width: 745px) {
+@media (max-width: 793px) {
   #headerbar>h1 {
-    padding-left: 50%;
-    position: fixed;
+    font-size: 1.7rem;
+    padding-left: 64%;
   }
-
-  #headerbar>h2 {
-    padding-left: 65%;
-    padding-top: 8%;
-  }
-
 }
 
 
-
-@media (max-width: 745px) {
+@media (max-width: 735px) {
   #headerbar>h1 {
-    padding-left: 50%;
-    position: fixed;
+    font-size: 1.5rem;
+    padding-left: 66%;
+    padding-top: 32px;
   }
-
-  #headerbar>h2 {
-    padding-left: 65%;
-    padding-top: 8%;
-  }
-
 }
 
-@media (max-width: 675px) {
+@media (max-width: 711px) {
   #headerbar>h1 {
-    padding-left: 50%;
-    position: fixed;
+    font-size: 1.3rem;
+    padding-left: 68%;
+    padding-top: 34px;
   }
-
-  #headerbar>h2 {
-    padding-left: 65%;
-    padding-top: 8%;
-  }
-
 }
 
-@media (max-width: 600px) {
-
-  #navigation-tabs ul {
-    background-color: white;
+@media (max-width: 680px) {
+  #headerbar>h1 {
+   /* padding-left: 70%;
+    position: fixed;
+    font-size: 1.1rem;*/
     display: none;
   }
 
-  #navigation-tabs ul li {
+  #headerbar>h4 {
     display: block;
-    float: none;
-    color: black;
+    text-align: right;
+    padding-right: 22.5px;
+    padding-top: 38.7px;
   }
 
-  #navigation-tabs ul.open {
-    display: block;
-  }
 }
 
 
 
+@media (max-width: 403px) {
+  #headerbar>h1 {
+   /* padding-left: 70%;
+    position: fixed;
+    font-size: 1.1rem;*/
+    display: none;
+  }
+
+  #headerbar>h4 {
+    display: block;
+    text-align: right;
+    padding-right: 22.5px;
+    padding-top: 38.7px;
+  }
+
+  #headerbar {
+    height: 115px;
+  }
+
+}
 
 
 
@@ -333,4 +414,7 @@ footer {
   font-family: 'Libre Baskerville', serif;
   font-size: 9pt;
   text-align: center;
+  padding: 35px;
+  color: #5e7b60;
+  background-color: #202e21;
 }
